# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-08-27  Christian Heller  <christian.heller@tuxtax.de>

        * Move old files of "applicator/memoriser/" into new directories "applicator/memorise/" and "applicator/modify/"
        * Move old files of "applicator/calculator/" into new directory "applicator/calculate/"
        * Move old files of "applicator/filer/" into new directory "applicator/file/"
        * Move old files of "applicator/runner/" into new directory "applicator/run/"
        * Adapt files of "applicator/memorise/" and "applicator/modify/"

2011-08-24  Christian Heller  <christian.heller@tuxtax.de>

        * Adapt old files of "applicator/maintainer/" and move into new directory "applicator/maintain/"
        * Move "sense.c" from "applicator/communicate/" into directory "applicator/live/"
        * Move "interrupt.c" from "applicator/maintainer/" into directory "applicator/live/"

2011-08-22  Christian Heller  <christian.heller@tuxtax.de>

        * Adapt old files of "applicator/comparator/" and move into new directory "applicator/compare/"

2011-08-18  Christian Heller  <christian.heller@tuxtax.de>

        * Adapt old files of "applicator/guider/" and move into new directory "applicator/flow/"
        * Add integer comparison files in directory "executor/comparator/basic/integer/",
            which is useful not only for clearer code, but also for using the function
            "compare_integer_unequal" as loop break flag condition with less parametres and overhead
            than "compare_integer" which has to find the right comparison operator first what costs runtime