@@ -55,9 +55,10 @@
  * @param p3 the count
  * @param p4 the destination part index
  * @param p5 the source array index
- * @param p6 the destination part element index
+ * @param p6 the shrink flag
+ * @param p7 the destination part element index
  */
-void overwrite_part_element(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, void* p6) {
+void overwrite_part_element(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, void* p6, void* p7) {
 
     log_terminated_message((void*) INFORMATION_LEVEL_LOG_MODEL, (void*) L"Overwrite part element.");
 
@@ -65,10 +66,10 @@ void overwrite_part_element(void* p0, void* p1, void* p2, void* p3, void* p4, vo
     void* e = *NULL_POINTER_MEMORY_MODEL;
 
     // Get destination part element.
-    copy_array_forward((void*) &e, p0, (void*) POINTER_PRIMITIVE_MEMORY_ABSTRACTION, (void*) PRIMITIVE_MEMORY_MODEL_COUNT, (void*) VALUE_PRIMITIVE_MEMORY_NAME, p6);
+    copy_array_forward((void*) &e, p0, (void*) POINTER_PRIMITIVE_MEMORY_ABSTRACTION, (void*) PRIMITIVE_MEMORY_MODEL_COUNT, (void*) VALUE_PRIMITIVE_MEMORY_NAME, p7);
 
     // Overwrite item as element of the part container.
-    overwrite_item_element(e, p1, p2, p3, p4, p5, (void*) DATA_ITEM_MEMORY_NAME);
+    overwrite_item_element(e, p1, p2, p3, p4, p5, p6, (void*) DATA_ITEM_MEMORY_NAME);
 }
 
 /**
@@ -83,8 +84,9 @@ void overwrite_part_element(void* p0, void* p1, void* p2, void* p3, void* p4, vo
  * @param p3 the count
  * @param p4 the destination index
  * @param p5 the source index
+ * @param p6 the shrink flag
  */
-void overwrite_part(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5) {
+void overwrite_part(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, void* p6) {
 
     log_terminated_message((void*) INFORMATION_LEVEL_LOG_MODEL, (void*) L"Overwrite part.");
 
@@ -99,7 +101,7 @@ void overwrite_part(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5) 
     copy_array_forward((void*) &sm, p1, (void*) POINTER_PRIMITIVE_MEMORY_ABSTRACTION, (void*) PRIMITIVE_MEMORY_MODEL_COUNT, (void*) VALUE_PRIMITIVE_MEMORY_NAME, (void*) MODEL_PART_MEMORY_NAME);
 
     // Overwrite destination- with source part model item.
-    overwrite_item(dm, sm, p2, p3, p4, p5);
+    overwrite_item(dm, sm, p2, p3, p4, p5, p6);
 }
 
 /**
